objects/Vendor_Contact__c/Vendor_Contact__c.object-meta.xml
<CustomObject>
    <description>This is Vendor Contact Object.</description>
    <label>Vendor Contact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>