objects/Vendor_Contact__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>this is VC Status.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>