objects/Vendor_Contact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>this is Email ID of Vendor Contact</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>