objects/Vendor_Contact__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>This field contains first name of the vendor.</description>
    <label>First Name</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>