objects/Vendor_Contact__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>This field contains last name of the vendor.</description>
    <label>Last Name</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>