objects/Vendor_Contact__c/fields/Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Phone_1__c</fullName>
    <description>This field contains phone number of the vendor.</description>
    <label>Office Phone</label>
    <type>Phone</type>
</CustomField>