objects/Vendor_Contact__c/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <description>This field contains cell number of the vendor.</description>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>