objects/Vendor_Contact__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User Name</label>
    <type>Email</type>
</CustomField>